# INF01151

./: .gitignore  CMakeLists.txt  README.md  users.json
src/: main.cpp
src/aux_shared/: args_parser.cpp  args_parser.h  logger.cpp  logger.h  message_types.h
src/aux_shared/session/: session.cpp  session.h
src/client/: client.cpp  client.h  client_thread_runner.h
src/client/client_communication_manager/: client_communication_manager.cpp  client_communication_manager.h
src/client/communication_manager/: communication_manager.cpp  communication_manager.h
src/client/runner/: runner.cpp  runner.h
src/client/session/: session.cpp  session.h
src/client/user_gui/: user_gui.cpp  user_gui.h
src/client/user_menu/: user_menu.cpp  user_menu.h
src/server/: server.cpp  server.h  server_thread_runner.h
src/server/communication_manager/: communication_manager.cpp  communication_manager.h
src/server/memory/: serverMemory.cpp  serverMemory.h
src/server/persistence/: serverMemory.cpp  serverMemory.h
src/server/replica_manager/: replica_manager.cpp  replica_manager.h  replica_thread_runner.h
src/server/server_communication_manager/: server_communication_manager.cpp  server_communication_manager.h
src/server/session_manager/: session_manager.cpp  session_manager.h
src/server/user/: user.cpp  user.h
